# kursov-5

./: README.md  config.py  pyproject.toml
src/: company_api.py  db_manager.py  errors.py  main.py  utils.py  vacancy_api.py
